--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^18.1.0",
     "@types/compression": "^1.7.4",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
