--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "dev": "ts-node-dev --respawn --transpile-only --watch .env,package.json -r tsconfig-paths/register server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --watch .env,package.json -r tsconfig-paths/register server.ts",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "compression": "^1.7.4",
