--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "awilix": "^9.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
