--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
