--- a/package.json
+++ b/package.json
@@ -15,24 +15,30 @@
   },
   "dependencies": {
     "awilix": "^9.0.0",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.6.4",
     "morgan": "^1.10.0",
     "os": "^0.1.2",
     "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^18.1.0",
-    "@types/body-parser": "^1",
+    "@types/bcrypt": "^5",
     "@types/compression": "^1.7.4",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9",
+    "@types/lodash": "^4",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
